jaeger-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
  namespace: monitoring
spec:
  parentRefs:
  - name: platform-gateway-istio
    namespace: istio-system
  hostnames:
  - jaeger.local
  rules:
  - backendRefs:
    - name: jaeger
      port: 16686
