registry-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry-route
  namespace: registry
spec:
  parentRefs:
  - name: platform-gateway
    namespace: istio-system

  hostnames:
  - registry.local

  rules:
  - backendRefs:
    - name: docker-registry
      port: 5000
